# unicodeutil

./: CMakeLists.txt  README.md  SECURITY.md  build  build.bat  clean  clean.bat
.github/workflows/: linux.yml  windows.yml
src/: common.cpp  common.h  fileencoder.cpp  main.cpp  makebin.cpp  random.cpp  runtime.cpp  runtime.h  search.cpp  unicodeload.cpp  unicodeload.h  utf.cpp
src/commonlib/: Ireader.h  argvlib.h  basic_helper.h  basic_tree.h  callback_invoker.h  channel.h  char_judge.h  cmdline_ctx.h  constantlib.h  coutwrapper.h  enumext.h  exprlib.h  extension_operator.h  extutil.h  fileio.h  json_util.h  learnstd.h  net_helper.h  net_helper_old.h  number.h  number_reader.h  optmap.h  project_name.h  reader.h  readfunc.h  serializer.h  struct_utility.h  tokens.h  unicodedata.h  utf_helper.h  utfreader.h
src/commonlib/tokenparser/: tokendef.h  tokenparser.h
